[gd_scene load_steps=3 format=3 uid="uid://dl8p20a18bot2"]

[ext_resource type="Script" path="res://Prefabs/UI/exam_week_ui.gd" id="1_nfqvc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iap5"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.819608)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ExamWeekUI" type="Panel"]
custom_minimum_size = Vector2(150, 180)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3iap5")
script = ExtResource("1_nfqvc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -25.0
offset_right = 26.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DayContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="DayLabel" type="Label" parent="VBoxContainer/DayContainer"]
layout_mode = 2
text = "Day:"

[node name="Day" type="Label" parent="VBoxContainer/DayContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.294118, 0.701961, 0, 1)
text = "null"

[node name="ExamContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="ExamLabel" type="Label" parent="VBoxContainer/ExamContainer"]
layout_mode = 2
text = "Exam:"

[node name="Exam" type="Label" parent="VBoxContainer/ExamContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.392157, 0.168627, 1)
text = "null"

[node name="DificultyContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="DificultyLabel" type="Label" parent="VBoxContainer/DificultyContainer"]
layout_mode = 2
text = "Dificulty:"

[node name="Dificulty" type="Label" parent="VBoxContainer/DificultyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "null"

[node name="ReadyContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="ReadyLabel" type="Label" parent="VBoxContainer/ReadyContainer"]
layout_mode = 2
text = "Ready level:"

[node name="Ready" type="Label" parent="VBoxContainer/ReadyContainer"]
layout_mode = 2
text = "null"
