extends Panel

class_name ExamWeekUI

@onready var day_label: Label = $VBoxContainer/DayContainer/Day
@onready var exam_label: Label = $VBoxContainer/ExamContainer/Exam
@onready var dificulty_label: Label = $VBoxContainer/DificultyContainer/Dificulty
@onready var ready_label: Label = $VBoxContainer/ReadyContainer/Ready
